--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,16 +1,16 @@
 
 <div class="header-container">
-  <header class="flex border-b py-4 px-4 sm:px-10 bg-white font-sans min-h-[70px] tracking-wide fixed top-0 w-full z-50">
+  <header class="flex border-b py-4 px-4 sm:px-10 bg-[#a02626] font-sans min-h-[70px] tracking-wide fixed top-0 w-full z-50">
     <div class="flex flex-wrap items-center lg:gap-y-2 gap-y-4 gap-x-4 w-full max-w-screen-xl mx-auto">
       <!-- Logo -->
       <a href="/">
-        <img src="/Group7.svg" alt="logo" class="w-[140px] max-sm:hidden" />
+        <img src="/Group08.svg" alt="logo" class="w-[140px] max-sm:hidden" />
         <img src="/Group8.svg" alt="logo" class="w-8 h-8 hidden max-sm:block" />
       </a>
 
       <!-- Menú de navegación -->
       <div id="collapseMenu" class="hidden lg:flex lg:items-center lg:flex-1">
-        <button id="toggleClose" class="lg:hidden fixed top-2 right-4 z-[49] rounded-full bg-white w-9 h-9 flex items-center justify-center border">
+        <button id="toggleClose" class="lg:hidden fixed top-2 right-4 z-[49] rounded-full bg-[#80b4ec] w-9 h-9 flex items-center justify-center border">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-3.5 h-3.5 fill-black" viewBox="0 0 320.591 320.591">
             <path
               d="M30.391 318.583a30.37 30.37 0 0 1-21.56-7.288c-11.774-11.844-11.774-30.973 0-42.817L266.643 10.665c12.246-11.459 31.462-10.822 42.921 1.424 10.362 11.074 10.966 28.095 1.414 39.875L51.647 311.295a30.366 30.366 0 0 1-21.256 7.288z"
