--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
 
 <div class="header-container">
-  <header class="flex border-b py-4 px-4 sm:px-10 bg-[#a02626] font-sans min-h-[70px] tracking-wide fixed top-0 w-full z-50">
+  <header class="flex border-b py-4 px-4 sm:px-10 bg-[#cccccc] font-sans min-h-[70px] tracking-wide fixed top-0 w-full z-50">
     <div class="flex flex-wrap items-center lg:gap-y-2 gap-y-4 gap-x-4 w-full max-w-screen-xl mx-auto">
       <!-- Logo -->
       <a href="/">
-        <img src="/Group08.svg" alt="logo" class="w-[140px] max-sm:hidden" />
+        <img src="/Group_12.svg" alt="logo" class="w-[140px] max-sm:hidden" />
         <img src="/Group8.svg" alt="logo" class="w-8 h-8 hidden max-sm:block" />
       </a>
 
