--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@
 
       <!-- Menú de navegación -->
       <div id="collapseMenu" class="hidden lg:flex lg:items-center lg:flex-1">
-        <button id="toggleClose" class="lg:hidden fixed top-2 right-4 z-[49] rounded-full bg-[#80b4ec] w-9 h-9 flex items-center justify-center border">
+        <button id="toggleClose" class="lg:hidden fixed top-2 right-4 z-[49] rounded-full bg-[#ebeff4] w-9 h-9 flex items-center justify-center border">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-3.5 h-3.5 fill-black" viewBox="0 0 320.591 320.591">
             <path
               d="M30.391 318.583a30.37 30.37 0 0 1-21.56-7.288c-11.774-11.844-11.774-30.973 0-42.817L266.643 10.665c12.246-11.459 31.462-10.822 42.921 1.424 10.362 11.074 10.966 28.095 1.414 39.875L51.647 311.295a30.366 30.366 0 0 1-21.256 7.288z"
@@ -27,13 +27,13 @@
             </a>
           </li>
           <li class="max-lg:border-b max-lg:py-3">
-            <a href="/" class="hover:text-[#007bff] text-gray-600 block font-bold text-[20px]">Home</a>
+            <a href="/" class="hover:text-[#007bff] text-black block font-bold text-[20px]">Home</a>
           </li>
           <li class="max-lg:border-b max-lg:py-3">
-            <a href="/Project" class="hover:text-[#007bff] text-gray-600 block font-bold text-[20px]">Project</a>
+            <a href="/Project" class="hover:text-[#007bff] text-black block font-bold text-[20px]">Project</a>
           </li>
           <li class="max-lg:border-b max-lg:py-3">
-            <a href="/Contact" class="hover:text-[#007bff] text-gray-600 block font-bold text-[20px]">Contact</a>
+            <a href="/Contact" class="hover:text-[#007bff] text-black block font-bold text-[20px]">Contact</a>
           </li>
         </ul>
       </div>
@@ -98,14 +98,14 @@
 
 /* Estilos para el header al hacer scroll */
 header.scrolled {
-  background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semi-transparente */
+  background-color:#cccccc; /* Fondo blanco semi-transparente */
   backdrop-filter: blur(10px); /* Efecto de difuminado */
   color: #000; /* Color de texto oscuro en modo light */
 }
 
 /* Ajustes para el modo dark */
 .dark header.scrolled {
-  background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro semi-transparente */
+  background-color: #cccccc; /* Fondo oscuro semi-transparente */
   color: #fff; /* Color de texto claro en modo dark */
 }
 
